[package]
name = "edr_chain_l1"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-serde.workspace = true
edr_block_api.workspace = true
edr_block_builder_api.workspace = true
edr_block_header.workspace = true
edr_block_local.workspace = true
edr_block_remote.workspace = true
edr_blockchain_api.workspace = true
edr_chain_config.workspace = true
edr_chain_spec.workspace = true
edr_chain_spec_block.workspace = true
edr_chain_spec_provider.workspace = true
edr_eip1559.workspace = true
edr_eip2930.workspace = true
edr_eip7702.workspace = true
edr_evm2.workspace = true
edr_evm_spec.workspace = true
edr_primitives.workspace = true
edr_receipt.workspace = true
edr_receipt_builder_api.workspace = true
edr_receipt_spec.workspace = true
edr_rpc_eth.workspace = true
edr_rpc_spec.workspace = true
edr_runtime_spec.workspace = true
edr_signer.workspace = true
edr_state_api.workspace = true
edr_transaction.workspace = true
edr_trie.workspace = true
log.workspace = true
revm-context-interface.workspace = true
revm-primitives.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
assert-json-diff = "2.0.2"
edr_defaults.workspace = true
edr_evm.workspace = true
edr_test_receipt.workspace = true
edr_test_utils.workspace = true
hex.workspace = true
paste.workspace = true
serde_json.workspace = true

[features]
tracing = ["dep:tracing"]

[lints]
workspace = true
