[package]
name = "edr_chain_spec"
version.workspace = true
edition.workspace = true

[dependencies]
edr_eip1559.workspace = true
edr_eip2930.workspace = true
edr_eip7702.workspace = true
edr_primitives.workspace = true
revm-context-interface.workspace = true
revm-primitives.workspace = true

[lints]
workspace = true
