[package]
name = "edr_common"

version.workspace = true
edition.workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["serde", "getrandom", "arbitrary", "rlp"] }

dunce.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror = "1"
tokio = { workspace = true, features = ["rt-multi-thread"] }
walkdir = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
similar-asserts.workspace = true

[lints]
workspace = true
