[package]
name = "edr_coverage"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
derive_more = { workspace = true, features = ["debug"] }
dyn-clone.workspace = true
edr_block_header.workspace = true
edr_defaults.workspace = true
edr_evm.workspace = true
edr_evm_spec.workspace = true
edr_primitives.workspace = true
edr_transaction.workspace = true

[dev-dependencies]
edr_block_api.workspace = true
edr_blockchain_api.workspace = true
edr_blockchain_local.workspace = true
edr_chain_l1.workspace = true
edr_chain_spec.workspace = true
edr_chain_spec_block.workspace = true
edr_evm2.workspace = true
edr_receipt_spec.workspace = true
edr_signer.workspace = true
edr_state_api.workspace = true
edr_test_utils = { path = "../edr_test_utils" }
revm-context.workspace = true

[lints]
workspace = true
