[package]
name = "edr_eth"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-serde.workspace = true
c-kzg.workspace = true
edr_chain_spec.workspace = true
edr_primitives.workspace = true
edr_receipt.workspace = true
log = { version = "0.4.17", default-features = false }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
default = ["std"]
serde = ["dep:serde", "dep:serde_json", "c-kzg/serde"]
std = ["alloy-serde/std", "serde?/std"]
test-remote = []

[lints]
workspace = true
