[package]
name = "edr_evm"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
alloy-rlp = { version = "0.3.11", default-features = false, features = ["derive"] }
async-rwlock = { version = "1.3.0", default-features = false }
auto_impl = { version = "1.2", default-features = false }
cita_trie = { version = "4.0.0", default-features = false }
derive-where.workspace = true
dyn-clone = { version = "1.0.13", default-features = false }
futures = { version = "0.3.28", features = ["alloc", "async-await", "executor", "std"] }
hasher = { version = "0.1.4", default-features = false, features = ["hash-keccak"] }
indexmap = { version = "2.0.0", default-features = false, features = ["std"] }
itertools = { version = "0.11.0", default-features = false, features = ["use_alloc", "use_std"] }
log.workspace = true
once_cell = { version = "1.19.0", default-features = false, features = ["alloc", "race", "std"] }
parking_lot = { version = "0.12.1", default-features = false }
edr_defaults.workspace = true
edr_eth.workspace = true
edr_rpc_eth.workspace = true
edr_utils.workspace = true
revm.workspace = true
revm-context.workspace = true
revm-context-interface.workspace = true
revm-database-interface.workspace = true
revm-handler.workspace = true
revm-interpreter.workspace = true
revm-precompile.workspace = true
rpds = { version = "1.1.0", default-features = false, features = ["std"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { version = "0.1.37", features = ["attributes", "std"], optional = true }

[dev-dependencies]
anyhow.workspace = true
criterion = { version = "0.4.0", default-features = false, features = ["cargo_bench_support", "html_reports", "plotters"] }
edr_chain_l1 = { workspace = true, features = ["test-utils"] }
edr_generic.workspace = true
edr_test_utils.workspace = true
lazy_static = "1.4.0"
paste = { version = "1.0.14", default-features = false }
serial_test = "2.0.0"
tempfile = "3.7.1"

[features]
test-remote = []
test-utils = ["dep:anyhow"]
tracing = ["dep:tracing", "edr_eth/tracing"]

[lints]
workspace = true
