[package]
name = "edr_gas_report"
version.workspace = true
edition.workspace = true

[dependencies]
derive_more.workspace = true
dyn-clone.workspace = true
edr_evm_spec.workspace = true
edr_primitives.workspace = true
edr_receipt.workspace = true
edr_solidity.workspace = true
edr_solidity_tests.workspace = true
edr_state_api.workspace = true
edr_transaction.workspace = true
thiserror.workspace = true

[lints]
workspace = true
