[package]
name = "edr_instrument"
version.workspace = true
edition.workspace = true

[dependencies]
edr_primitives.workspace = true
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
sha3.workspace = true
slang_solidity = { git = "https://github.com/NomicFoundation/slang", tag = "v1.3.2" }
thiserror.workspace = true

[lints]
workspace = true
