[package]
name = "edr_napi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
alloy-sol-types.workspace = true
crossbeam-channel = "0.5"
derive_more.workspace = true
derive-where.workspace = true
edr_artifact.workspace = true
edr_block_header.workspace = true
edr_block_miner.workspace = true
edr_blockchain_fork.workspace = true
edr_chain_config.workspace = true
edr_chain_l1.workspace = true
edr_chain_spec.workspace = true
edr_chain_spec_block.workspace = true
edr_chain_spec_evm.workspace = true
edr_chain_spec_rpc.workspace = true
edr_coverage.workspace = true
edr_decoder_revert.workspace = true
edr_defaults.workspace = true
edr_eip1559.workspace = true
edr_gas_report.workspace = true
edr_generic.workspace = true
edr_instrument.workspace = true
edr_napi_core.workspace = true
edr_op = { workspace = true, optional = true }
edr_precompile.workspace = true
edr_primitives.workspace = true
edr_provider.workspace = true
edr_receipt.workspace = true
edr_rpc_client.workspace = true
edr_scenarios = { workspace = true, optional = true }
edr_solidity_tests.workspace = true
edr_state_api.workspace = true
edr_signer.workspace = true
edr_solidity.workspace = true
edr_tracing.workspace = true
edr_utils_sync.workspace = true
mimalloc = { version = "0.1.39", default-features = false, features = [
    "local_dynamic_tls",
] }
# The `async` feature ensures that a tokio runtime is available.
# `compat-mode` is a temporary napi v2->v3 shim for passing objects through threadsafe functions.
# `dyn-symbols` lets test binaries that keep napi code alive link outside a Node host.
napi = { version = "3", default-features = false, features = [
    "async",
    "compat-mode",
    "dyn-symbols",
    "error_anyhow",
    "napi8",
    "serde-json",
] }
napi-derive = "3"
parking_lot.workspace = true
rand = { version = "0.9.0", optional = true }
serde.workspace = true
serde_json.workspace = true
static_assertions = "1.1.0"
strum = { version = "0.28.0", features = ["derive"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-flame = { version = "0.2.0", default-features = false, features = [
    "smallvec",
] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "parking_lot",
    "smallvec",
    "std",
] }

# Solidity tests
foundry-cheatcodes.workspace = true
foundry-compilers.workspace = true

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9.93", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.93", features = ["vendored"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9.93", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.93", features = ["vendored"] }

[build-dependencies]
# napi-build has no v3 release; 2.x is current for napi 3.
napi-build = "2.3"

[features]
op = ["dep:edr_op"]
scenarios = ["dep:edr_scenarios", "dep:rand"]
test-mock = ["edr_provider/test-utils"]
tracing = [
    "edr_block_miner/tracing",
    "edr_blockchain_fork/tracing",
    "edr_chain_l1/tracing",
    "edr_chain_spec_block/tracing",
    "edr_chain_spec_evm/tracing",
    "edr_gas_report/tracing",
    "edr_generic/tracing",
    "edr_napi_core/tracing",
    "edr_op/tracing",
    "edr_provider/tracing",
    "edr_rpc_client/tracing",
    "edr_solidity/tracing",
    "edr_solidity_tests/tracing",
]

[lints]
workspace = true
