[package]
name = "edr_napi_core"
version.workspace = true
edition.workspace = true

[dependencies]
ansi_term = { version = "0.12.1", default-features = false }
derive-where.workspace = true
edr_artifact.workspace = true
edr_block_api.workspace = true
edr_block_header.workspace = true
edr_chain_config.workspace = true
edr_chain_l1.workspace = true
edr_chain_spec.workspace = true
edr_chain_spec_evm.workspace = true
edr_decoder_revert.workspace = true
edr_eip1559.workspace = true
edr_eth.workspace = true
edr_generic.workspace = true
edr_precompile.workspace = true
edr_primitives.workspace = true
edr_provider.workspace = true
edr_rpc_client.workspace = true
edr_signer.workspace = true
edr_solidity.workspace = true
edr_solidity_tests.workspace = true
edr_tracing.workspace = true
edr_transaction.workspace = true
foundry-cheatcodes.workspace = true
itertools = { version = "0.12.0", default-features = false }
napi = { version = "2.16.10", default-features = false, features = [
    "async",
    "error_anyhow",
    "napi8",
    "serde-json",
] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[features]
tracing = [
    "edr_chain_l1/tracing",
    "edr_chain_spec_evm/tracing",
    "edr_generic/tracing",
    "edr_provider/tracing",
    "edr_rpc_client/tracing",
    "edr_solidity/tracing",
    "edr_solidity_tests/tracing",
]

[lints]
workspace = true
