[package]
name = "edr_napi_optimism"
version = "0.3.5"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
edr_napi = { path = "../edr_napi" }
edr_napi_core = { path = "../edr_napi_core" }
edr_optimism = { path = "../edr_optimism" }
edr_provider = { path = "../edr_provider" }
# when napi is pinned, be sure to pin napi-derive to the same version
# The `async` feature ensures that a tokio runtime is available
napi = { version = "2.16.0", default-features = false, features = ["async", "error_anyhow", "napi8", "serde-json"] }
napi-derive = "2.16.0"

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9.93", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.93", features = ["vendored"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9.93", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.93", features = ["vendored"] }

[build-dependencies]
napi-build = "2.0.1"

[features]
scenarios = ["edr_napi/scenarios"]
tracing = ["edr_napi/tracing", "edr_napi_core/tracing", "edr_provider/tracing"]

[lints]
workspace = true
