[package]
name = "edr_op"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-rlp.workspace = true
alloy-serde = { workspace = true, features = ["std"] }
edr_chain_l1.workspace = true
edr_eip1559.workspace = true
edr_eip2930.workspace = true
edr_eip7702.workspace = true
edr_eth = { path = "../edr_eth", features = ["serde", "std"] }
edr_evm = { path = "../edr_evm" }
edr_evm_spec.workspace = true
edr_generic = { path = "../edr_generic" }
edr_napi_core = { path = "../edr_napi_core" }
edr_provider = { path = "../edr_provider" }
edr_receipt.workspace = true
edr_rpc_eth = { path = "../edr_rpc_eth" }
edr_signer.workspace = true
edr_solidity = { path = "../edr_solidity" }
edr_solidity_tests.workspace = true
edr_transaction.workspace = true
log = { version = "0.4.17", default-features = false }
op-alloy-rpc-types = { version = "0.17.2", default-features = false }
op-revm.workspace = true
revm-context.workspace = true
revm-context-interface.workspace = true
serde = { workspace = true, features = ["derive", "std"] }
thiserror.workspace = true
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
anyhow = "1.0.89"
edr_defaults = { path = "../edr_defaults" }
edr_evm = { path = "../edr_evm", features = ["test-utils"] }
edr_provider = { path = "../edr_provider", features = ["test-utils"] }
edr_rpc_eth = { path = "../edr_rpc_eth", features = ["test-utils"] }
edr_test_utils = { path = "../edr_test_utils" }
parking_lot = { version = "0.12.1", default-features = false }
paste.workspace = true
serde_json.workspace = true
serial_test = "2.0.0"
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }

[features]
test-remote = []
test-utils = ["edr_provider/test-utils"]

[lints]
workspace = true
