[package]
name = "edr_op"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-rlp.workspace = true
alloy-serde = { workspace = true, features = ["std"] }
edr_block_api.workspace = true
edr_block_builder_api.workspace = true
edr_block_header.workspace = true
edr_block_local.workspace = true
edr_block_remote.workspace = true
edr_blockchain_api.workspace = true
edr_chain_config.workspace = true
edr_chain_l1.workspace = true
edr_chain_spec.workspace = true
edr_chain_spec_block.workspace = true
edr_chain_spec_provider.workspace = true
edr_eip1559.workspace = true
edr_eip2930.workspace = true
edr_eip7702.workspace = true
edr_evm_spec.workspace = true
edr_napi_core.workspace = true
edr_primitives.workspace = true
edr_provider.workspace = true
edr_receipt.workspace = true
edr_receipt_builder_api.workspace = true
edr_receipt_spec.workspace = true
edr_rpc_eth.workspace = true
edr_rpc_spec.workspace = true
edr_signer.workspace = true
edr_solidity.workspace = true
edr_solidity_tests.workspace = true
edr_state_api.workspace = true
edr_test_block_replay.workspace = true
edr_transaction.workspace = true
edr_utils.workspace = true
log = { version = "0.4.17", default-features = false }
op-alloy-rpc-types = { version = "0.17.2", default-features = false }
op-revm.workspace = true
revm-context.workspace = true
revm-context-interface.workspace = true
serde = { workspace = true, features = ["derive", "std"] }
thiserror.workspace = true
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
anyhow = "1.0.89"
edr_block_api.workspace = true
edr_defaults.workspace = true
edr_eth.workspace = true
edr_runtime = { workspace = true, features = ["test-utils"] }
edr_provider = { workspace = true, features = ["test-utils"] }
edr_rpc_eth.workspace = true
edr_test_receipt.workspace = true
edr_test_utils.workspace = true
parking_lot.workspace = true
paste.workspace = true
serde_json.workspace = true
serial_test = "2.0.0"
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }

[features]
test-remote = []
test-utils = ["edr_provider/test-utils"]
tracing = [
    "edr_block_builder_api/tracing",
    "edr_block_local/tracing",
    "edr_blockchain_api/tracing",
    "edr_chain_l1/tracing",
    "edr_chain_spec_block/tracing",
    "edr_chain_spec_provider/tracing",
    "edr_evm_spec/tracing",
    "edr_napi_core/tracing",
    "edr_receipt_builder_api/tracing",
    "edr_receipt_spec/tracing",
    "edr_solidity/tracing",
    "edr_solidity_tests/tracing"
]

[lints]
workspace = true
