[package]
name = "edr_opt"
version = "0.3.5"
edition = "2021"

[dependencies]
edr_eth = { version = "0.3.5", path = "../edr_eth", features = ["serde", "std"] }
revm-primitives = { git = "https://github.com/NomicFoundation/revm", rev = "cc64e26", version = "3.1", default-features = false, features = ["c-kzg", "hashbrown", "optimism", "rand", "serde", "std"] }

[dev-dependencies]
anyhow = "1.0.75"
edr_defaults = { version = "0.3.5", path = "../edr_defaults" }
edr_test_utils = { version = "0.3.5", path = "../edr_test_utils" }
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }

[features]
test-remote = []
