[package]
name = "edr_opt"
version = "0.3.5"
edition = "2021"

[dependencies]
alloy-rlp = { version = "0.3", default-features = false, features = ["derive"] }
edr_eth = { path = "../edr_eth", features = ["serde", "std"] }
edr_evm = { path = "../edr_evm" }
edr_rpc_eth = { path = "../edr_rpc_eth" }
log = { version = "0.4.17", default-features = false }
revm = { git = "https://github.com/NomicFoundation/revm", rev = "14945e92", version = "10.0", default-features = false, features = ["c-kzg", "dev", "optimism", "serde", "std"] }
serde = { version = "1.0.147", default-features = false, features = ["derive", "std"] }
thiserror = { version = "1.0.37", default-features = false }
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
anyhow = "1.0.75"
edr_defaults = { path = "../edr_defaults" }
edr_test_utils = { path = "../edr_test_utils" }
parking_lot = { version = "0.12.1", default-features = false }
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt-multi-thread", "sync"] }

[features]
test-remote = []
